<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndHook_Test</string>
    <string name="more_details">Please see logcat for more details.</string>
    <string name="JNI">JNI</string>
    <string name="Xposed">Xposed</string>
    <string name="Constructor">Constructor</string>
    <string name="GC">GC</string>
    <string name="Static">Static</string>
    <string name="Virtual">Virtual</string>
    <string name="WideningConversion">WideningConversion</string>
    <string name="SystemClass">System</string>
    <string name="Native">Native</string>
    <string name="Thread">Thread</string>
    <string name="Exception">Exception</string>

</resources>